# remote-flash-test

./: .gitignore  pyproject.toml
app/: main.py
app/api/: api.py
app/libs/: flash_stm32.py
