[project]
name = "remote-flash"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "taskipy>=1.14.1",
    "uvicorn[standard]>=0.37.0",
]

[tool.taskipy.tasks]
start = "python app/main.py"
